# pinn_project

./: .gitignore  CMakeLists.txt  README.md  analyze_drift.py  requirements.txt  test_stack.py
src_cpp/: CMakeLists.txt  main.cpp
src_cpp/controllers/: ComputedTorqueControl.cpp  ComputedTorqueControl.h  ComputedTorqueControl.tpp  config.h
src_cpp/graphics/: GraphicsApp.cpp  config.h  kinematics.h  robot.h
src_cpp/include/: ControllerInterface.h  DataLogging.h  EndPointGenerator.h  constants.h  helpers.h
src_cpp/ipc/: SharedMemoryLink.cpp  SharedMemoryLink.h
src_cpp/models/: RobotModel.cpp  RobotModel.h
src_cpp/plant/: ManipulatorPlant.cpp  ManipulatorPlant.h  config.h
src_cpp/sensors/: RobotSensors.cpp  RobotSensors.h  RobotSensors.tpp
src_cpp/trajectory/: TrajectoryGenerator.cpp  TrajectoryGenerator.h
src_python/: pyproject.toml  test_stack.py
src_python/analysis/: plot_telemetry.py
