[project]
name = "pinn-manipulator"
version = "0.1.0"
description = "2 DOF PINN Architecture"
authors = [{ name = "elichall", email = "1elijah.hall@gmail.com" }]
requires-python = ">=3.11"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "*"
equinox = "*"
optax = "*"
matplotlib = "*"
pandas = "*"
# The core computational engine (Modernized for Python 3.14)
jax = ">=0.10.0"

# --- THE HEAVY COMPUTE ISOLATION ---
[tool.poetry.group.cuda.dependencies]
jax = { extras = ["cuda12"], version = ">=0.10.0" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
